# Assessment_AI

./: .env  .gitignore  README_STREAMLIT.md  agent_avaliador.py  agent_gerador_assessment.py  agent_teste.py  app.py  app_chat_avaliacao.py  pyproject.toml  requirements.txt
Assessments/: assessment_Marketing.xlsx  assessment_Vendas.xlsx
agents/: agent_avaliador.py  agent_gerador_assessment.py
pages/: 1_Chat_Avaliacao.py  2_Chat_Avaliacao.py  2_Gerador_Assessment.py
tmp/: agent.db
